# AuraOS

./: AuraOS_MVP_Detailed_Specification.docx  AuraOS_Product_Suite.docx  CLAUDE.md  GEMINI.md  IDEA.md  MARKETING.md  PRODUCT.md  README.md  TODO.md  docker-compose.yml  package-lock.json  package.json  register-agent.ts  run-code.ts  tsconfig.json
dashboard/: index.html  package-lock.json
dashboard/src/: App.tsx  index.css
docker/node-runner/: Dockerfile  entrypoint.sh
docker/python-runner/: Dockerfile  entrypoint.sh
sdk/python/: README.md  pyproject.toml
sdk/python/auraos/: __init__.py  client.py
sdk/python/auraos.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: server.ts  test-dashboard-live.ts
src/core/browser/: actions.ts  context-pool.ts  session-manager.ts  test-browser.ts  types.ts
src/core/db/: client.ts  migrate.ts  schema.sql  seed-agents.ts  test-connection.ts
src/core/events/: live-stream.ts
src/core/memory/: embeddings.ts  memory-engine.ts  state-engine.ts  test-memory.ts  types.ts
src/core/sandbox/: aura-fs.ts  docker-client.ts  egress-proxy.ts  orchestrator.ts  test-moats.ts  test-sandbox.ts  types.ts
src/core/scheduler/: cron-scheduler.ts  event-broker.ts  test-scheduler.ts  types.ts  warm-pool.ts  webhook-listener.ts
tests/integration/: test-api-and-ws.ts  test-python-sdk.py
tests/unit/: test-types-and-limits.ts
