[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auraos"
version = "0.1.0"
description = "Python SDK for AuraOS Agentic Runtime Environment"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["auraos*"]
